# azx

./: .gitignore  .ruff.toml  Pipfile  README.md  pyproject.toml
azx/alphazero/: __init__.py  agent.py  trainer.py
azx/internal/: support.py
azx/muzero/: agent.py  trainer.py
examples/: maze-mz.py  maze.py  pacman.py
