[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azx"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jax>=0.6.0",
    "chex>=0.1.89",
    "mctx>=0.0.5",
    "orbax>=0.1.9"
]

[project.optional-dependencies]
dev = ["ruff[format]"]

[tool.setuptools.packages.find]
where = ["azx"]

[tool.ruff]
line-length = 88
target-version = "py38"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
